Fixing media paths

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ PODIOBOOKS.COM 2.0
 ==================
 Last Updated: 20 Jan 2009
 
-Team Lead: Chris Miller (chris@podiobooks.com)
+Team lEAD: ˝Chris Miller (chris@podiobooks.com)
 
 License
 -------
