--- a/README
+++ b/README
@@ -8,4 +8,4 @@ License
 -------
 This software is licensed under an Attribution-NonCommercial-ShareAlike 3.0 License. Please visit http://creativecommons.org/licenses/by-nc-sa/3.0/ for a full reading of the license.
 
-
+Notes
