Added Tim White as a contributor.

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ This software is licensed under an Attribution-NonCommercial-ShareAlike 3.0 Lice
 
 Contributors
 ------------
-
+Tim White (tim@cyface.com)
 
 Purpose
 -------
