--- a/README
+++ b/README
@@ -10,6 +10,7 @@ This software is licensed under an Attribution-NonCommercial-ShareAlike 3.0 Lice
 
 Contributors
 ------------
+Jason Penney (jpenney@jczorkmid.net)
 Tim White (tim@cyface.com)
 
 Purpose
