--- a/README
+++ b/README
@@ -17,3 +17,15 @@ Purpose
 -------
 
 The purpose of the Podiobooks project is to create a platform for distributing media via either direct download or via scheduled, updated RSS feeds. Additionally, there should be a strong community element, allowing consumers to connect with each other and the author.  This software will eventually replace the current PHP-based solution at http://www.podiobooks.com.
+
+Required Packages
+-----------------
+This software depends on the following libraries being available on the Python Path (e.g. having been easy_installed into the site-packages directory)
+
+#Main
+django  # 1.x
+
+#For Auth OpenID:
+python-openid       # http://openidenabled.com/python-openid/   version 2.x
+django-authopenid   # http://code.google.com/p/django-authopenid/
+httplib2 			# http://code.google.com/p/httplib2
