Changing the license textin the README.
Former-commit-id: 74de6510fb08fab9748bf376bd674e0a2a37cbe7
Former-commit-id: 475697c1109a9708efc51ffeba881481fac1c57e

--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Team Lead: Chris Miller (chris@podiobooks.com)
 
 License
 -------
-This software is licensed under an Attribution-NonCommercial-ShareAlike 3.0 License. Please visit http://creativecommons.org/licenses/by-nc-sa/3.0/ for a full reading of the license.
+This software is licensed under a GPL v3.0 license. Please visit http://www.gnu.org/licenses/gpl-3.0-standalone.html for a full reading of the license. A full copy has also been included in this package, in LICENSE.txt.
 
 Contributors
 ------------
