Working read access to User Profile.  Removed email from UserProfile, since email exists in the main user object.
Former-commit-id: f891206071553ddc76e3eaca3dc9ed491666985d
Former-commit-id: a39e98087222424be71d0e80d41c60b091dac3ec

--- a/README
+++ b/README
@@ -25,7 +25,12 @@ This software depends on the following libraries being available on the Python P
 #Main
 django  # 1.x
 
+#Admin Site Documentation
+docutits # .5
+
 #For Auth OpenID:
 python-openid       # http://openidenabled.com/python-openid/   version 2.x
 django-authopenid   # http://code.google.com/p/django-authopenid/
 httplib2 			# http://code.google.com/p/httplib2
+
+#
