--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Contributors
 ------------
 Jason Penney (jpenney@jczorkmid.net)
 Tim White (tim@cyface.com)
+David Moore (eroomd@gmail.com)
 
 Purpose
 -------
