Update contributors list.

--- a/README
+++ b/README
@@ -13,6 +13,7 @@ Contributors
 Jason Penney (jpenney@jczorkmid.net)
 Tim White (tim@cyface.com)
 David Moore (eroomd@gmail.com)
+Thomas Gideon (cmdln@thecommandline.net)
 
 Purpose
 -------
