Added pydev-extensions-compatible debug manage.py.  MOVED PyDev Project out from under /src folder!
Former-commit-id: 87dc09911c099b421f90dd17a37470c235ed0798
Former-commit-id: 7c65a55a2db38e99f3f289943e330a204fb8bf3b
Former-commit-id: 88e3158a54b193f1ea578211d4df65eef910ac95

--- a/README
+++ b/README
@@ -28,7 +28,7 @@ This software depends on the following libraries being available on the Python P
 django  # 1.x
 
 #Admin Site Documentation
-docutits # .5
+docutils # .5
 
 #For Auth OpenID:
 python-openid       # http://openidenabled.com/python-openid/   version 2.x
