Noted dependency on django_registration (dependecy comes from django_authopenid)
Former-commit-id: ef83ffc46bf76724ee2fcd44f3ec7dce20d1cd1d
Former-commit-id: f8c2ac33dc7d3b2852161781da7b1cb9990f5163
Former-commit-id: e0556eb02ceb566690e0548ed0c35abbd2a9936b
Former-commit-id: e889bcbabc4436088c5eff077b91e5d3adb7e1da

--- a/README
+++ b/README
@@ -33,7 +33,8 @@ docutils # .5
 
 # For Auth OpenID:
 python-openid       # http://openidenabled.com/python-openid/   version 2.x
-django-authopenid   # http://code.google.com/p/django-authopenid/
+django-authopenid   # http://bitbucket.org/benoitc/django-authopenid
+django-registration # http://bitbucket.org/ubernostrum/django-registration/
 httplib2 			# http://code.google.com/p/httplib2
 
 # For MP3 Validation
