Updated dependencies to include eyeD3 instead of mutagen.
Former-commit-id: 802bf44090784a6a2b105d89925e1f441260e9f2
Former-commit-id: e89286f0162a7069702b68b1bbf0ac39b8942e34
Former-commit-id: 21f85e1989a2abf50c5d585d0f66eb6b278a6677
Former-commit-id: 1ec24929ffea439bca43fd3b2ece3c4e455a4f08

--- a/README
+++ b/README
@@ -38,7 +38,7 @@ django-registration # http://bitbucket.org/ubernostrum/django-registration/
 httplib2 			# http://code.google.com/p/httplib2
 
 # For MP3 Validation
-mutagen				# http://code.google.com/p/mutagen/
+eyeD3				# http://eyed3.nicfit.net (Must add 'eyeD3' to Forced Builtins in PyDev to work right)
 
 # Search:
 django-sphinx 2.x # http://github.com/dcramer/django-sphinx (do a git clone of the latest)
