Added PIL dependency for the ImageFields.
Former-commit-id: 230289ba4f7476df82a0c75422caafaab3a13a2d
Former-commit-id: e408f5a37e36bd85c7633619346a713c695daa98
Former-commit-id: 6b082688ed9b099d6a4fef64a2400bdf7df75481
Former-commit-id: 8de9a5a0e78a39b9294db4efd5b6622ddff3e747
Former-commit-id: 23c21c8ddbfee9ede9c72bd8f533a7f31b5106f7

--- a/README
+++ b/README
@@ -27,6 +27,7 @@ This software depends on the following libraries being available on the Python P
 # Main
 django  # 1.x
 psycopg2 # 2.x - PostgreSQL driver for Python.  Windows version: http://www.stickpeople.com/projects/python/win-psycopg/
+PIL - Python Imaging Library is required to support the ImageFields in the model (requires .exe installer on Windows)
 
 # Admin Site Documentation
 docutils # .5
