Added dependencies on django-tinymce.
Former-commit-id: 90b931b155a841624a262d25a8ff10bf223caea7
Former-commit-id: 9862e74f49a86aba71d16f376d6a8694248a3656
Former-commit-id: 5b47f4dc1b4301562c21c0d633a04e45d0acf84f
Former-commit-id: 5407e43b3d88d97fd2c0eddb5e0c179a8a22c17e
Former-commit-id: 94dc03047442689781a4f33d367794096cc56f16

--- a/README
+++ b/README
@@ -47,4 +47,7 @@ Sphinx # Not python, standalone daemon - http://sphinxsearch.com - make sure you
 
 # Cache:
 memcached # Not python, standalone daemon - http://www.danga.com/memcached/
+
+# WYSIWYG HTML Editor Integration
+django-tinymce # http://code.google.com/p/django-tinymce/
 #
