Added win7 notes, tweaked apache settings.

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -90,6 +90,7 @@ For all of those items, you should be able to basically follow the Installer pro
 2) Open the podiobooks project if it isn't open
 3) Run->External Tools->podiobooks buildout
 4) It will download all the required eggs and other bits, which will take some time
+5) It will try and create a .pydevproject file...if it fails with permissions issues (win7) you may have to add the .eggs to your project by hand in the PyDev preferences.
 
 -----------SETUP POSTGRESQL---------------
 1) Open pgAdmin III, the Postgres Admin Utility
@@ -133,12 +134,12 @@ For all of those items, you should be able to basically follow the Installer pro
 	</Location>
 3) This will take over the root of your server with podiobooks.  If you don't want that, you can do a virtualhost like this:
 	Listen 8000
-	<VirtualHost _default_:8000>  #The address/name here has to match your ServerName setting
+	<VirtualHost *:8000>
 		#mod_wsgi for Django Dev
 		LoadModule wsgi_module modules/mod_wsgi.so
-		WSGIScriptAlias / "C:/Documents and Settings/tlwhit2/My Documents/Aptana Studio Workspace/podiobooks\bin/django.wsgi-script.py"
+		WSGIScriptAlias / "C:/Documents and Settings/tim/My Documents/Aptana Studio Workspace/podiobooks/bin/django.wsgi-script.py"
 		<Location />
-	    	Order allow,deny
+	    		Order allow,deny
 	   	 	Allow from all
 		</Location>
 	</VirtualHost>
